# ai-investment-team

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  summit_portfolio_companies.json
.claude/: launch.json
committee/: __init__.py  api.py  deck_extract.py  graph.py  main.py  network.py  network_embeddings.npy  persistence.py
committee/agents/: __init__.py  comparison_agent.py  competitive_intelligence.py  deck_agent.py  founder_analyzer.py  investment_memo.py  market_analyzer.py  product_analyst.py  risk_analyst.py  sql_agent.py
committee/tools/: __init__.py  presenton_api.py  tavily_competitors.py  tavily_founder_images.py  tavily_mcp.py
frontend/: index.html  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/: AgentsCard.tsx  Avatar.tsx  ChatView.tsx  ComparisonCard.tsx  DeckExtractCard.tsx  DueBanners.tsx  FollowupCard.tsx  Home.tsx  NetworkPanel.tsx  PdfSection.tsx  Sidebar.tsx  SynthesisCard.tsx
frontend/lib/: api.ts  gcal.ts  types.ts
scripts/: seed_portfolio_companies.py  test_tavily_competitors.py
src/llm/: models.py
src/utils/: llm.py
supabase/: schema.sql
