[tool.poetry]
name = "ai-hedge-fund"
version = "2026.6.17"
description = "AI investment committee that researches companies and produces committee memos"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "committee", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-anthropic = "0.3.5"
langchain-openai = "^0.3.5"
langgraph = "0.2.56"
python-dotenv = "1.0.0"
rich = "^13.9.4"
pydantic = "^2.4.2"
httpx = "^0.27.0"
langchain-mcp-adapters = ">=0.1,<0.2"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
python-multipart = "^0.0.12"
sentence-transformers = "^5.6.0"
scikit-learn = "^1.9.0"
supabase = "^2.10.0"
python-pptx = "^1.0.2"
pypdf = "^6.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.poetry.scripts]
committee = "committee.main:main"
